# open-plot-agent

./: .gitignore  README.md  README_EN.md  REQUIREMENTS.md  UI_DESIGN.md  UPGRADE_PLAN.md  chart-studio-v3.jsx
.claude/: settings.local.json
DesignSystem/: README.md  SKILL.md  colors_and_type.css
backend/: config.py  main.py  pyproject.toml  seed_demo.py  test_agent_loop.py  workspace_init.py
backend/agent/: chart_validator.py  code_patcher.py  config_block.py  context_compressor.py  loop.py  plot_code_validator.py  tools.py
backend/agent/providers/: anthropic_provider.py  base.py  litellm_provider.py  ollama_provider.py
backend/agent/rag/: chart_rag.py
backend/agent/tools/: __init__.py  base.py  data_utils.py  execute_python.py  git_diff.py  git_log.py  git_restore.py  inspect_data.py  install_package.py  list_files.py  query_data.py  read_file.py  render_chart.py  transform_data.py  write_data.py  write_file.py
backend/agent/tools/chart/: __init__.py  patch_config_prop.py  render_chart.py
backend/agent/tools/data/: __init__.py  _utils.py  inspect_data.py  query_data.py  recommend_charts.py  summarize_data.py  transform_data.py  write_data.py
backend/agent/tools/env/: __init__.py  execute_python.py  install_package.py
backend/agent/tools/file/: __init__.py  list_files.py  read_file.py  write_file.py
backend/agent/tools/git_ops/: __init__.py  git_diff.py  git_log.py  git_restore.py
backend/agent/tools/memory/: __init__.py  memory.py
backend/agent/tools/rag/: search_charts.py
backend/git_manager/: manager.py
backend/sandbox/: gid_fixer.py  runner.py
doc/: PROJECT_OVERVIEW.md  UPGRADE_PLAN.md
frontend/: package.json  (+1 more)
(+42 files in other folders)
