[project]
name = "open-plot-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.49",
    "openai>=1.70",          # Ollama / OpenAI-compat 共用
    "gitpython>=3.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.0",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "httpx>=0.28"]
