[project]
name = "open-plot-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.49",
    "openai>=1.70",          # Ollama / OpenAI-compat 共用
    "gitpython>=3.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.0",
    "aiofiles>=24.0",
    # Data tools (inspect_data / summarize_data / transform_data / recommend_charts)
    # run *in the backend process* and import these directly. They are NOT the same
    # as the per-project sandbox venv used by execute_python — install_package only
    # touches the sandbox venv, so backend deps must be declared here.
    "pandas>=2.0",
    "numpy>=1.26",
    "openpyxl>=3.1",         # for reading .xlsx in inspect_data / read_dataframe
    # LiteLLM — unified interface for 100+ LLM providers
    "litellm>=1.83",
    # LangChain RAG — semantic search over past chart code
    "langchain>=1.2",
    "langchain-community>=0.3",
    "faiss-cpu>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "httpx>=0.28"]
